--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -856,6 +856,11 @@ On the other hand, at least in the case of our simple object language, we have a
 list of function definitions, which can give us some bound on the configuration size
 after unfolding.
 
+\paragraph{Acknowledgments}
+The author would like to thank the four anonymous reviewers for
+the helpful suggestions on improving the presentation of
+this article.
+
 %\nocite{*}
 \bibliographystyle{eptcs}
 \bibliography{MRScpOptSize}
